<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/comment_coffee_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="177dp"
            android:layout_marginBottom="30dp"
            android:text="Coffee name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


            <TextView
                    android:id="@+id/lbl_cost"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:text="@string/cost"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

            <com.google.android.material.slider.RangeSlider
                    android:id="@+id/comment_cost"
                    android:layout_weight="2"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="10"
                    android:layout_height="8dp"
                    android:layout_width="match_parent" />

        <TextView
                android:id="@+id/lbl_taste"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/taste"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

        <com.google.android.material.slider.RangeSlider
                android:id="@+id/comment_taste"
                android:layout_weight="2"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"
                android:layout_height="8dp"
                android:layout_width="match_parent" />

        <TextView
                android:id="@+id/lbl_availability"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/availability"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

        <com.google.android.material.slider.RangeSlider
                android:id="@+id/comment_availability"
                android:layout_weight="2"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"
                android:layout_height="8dp"
                android:layout_width="match_parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_text_field"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/comment_hint" />

        <Button
            android:id="@+id/btn_comment_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:paddingBottom="15dp"/>

        <ListView
            android:id="@+id/comment_listview"
            android:layout_width="match_parent"
            android:layout_height="4000dp"
            android:dividerHeight="8dp"
            android:paddingTop="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>
