<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="8dp"
        tools:listitem="@layout/home_row"/>

</androidx.constraintlayout.widget.ConstraintLayout>