<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
            android:layout_width="400dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="400dp"
            android:id="@+id/radio_group"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.905"
            android:orientation="horizontal"
            android:layout_marginStart="12dp">

        <RadioButton
                android:text="@string/owner"
                android:layout_width="141dp"
                android:layout_height="58dp"
                android:id="@+id/rdbtn_Owner"
                android:checked="true"
                android:textColor="@color/black"/>

        <RadioButton
                android:text="@string/menu_support"
                android:layout_width="214dp"
                android:layout_height="58dp"
                android:id="@+id/rdbtn_Support"
                android:textColor="@color/black"/>

    </RadioGroup>

    <EditText
            android:layout_width="302dp"
            android:layout_height="162dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/txt_supportMsg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintVertical_bias="0.76" />

    <TextView
            android:text="@string/message"
            android:layout_width="114dp"
            android:layout_height="28dp"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintVertical_bias="0.526" />

    <Button
            android:text="@string/sendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sendEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintVertical_bias="0.954"
            android:background="@color/normal_gray"
            android:textColor="@color/black"/>

    <TextView
            android:text="@string/contact"
            android:layout_width="219dp"
            android:layout_height="53dp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="34sp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.083" />

    <TextView
            android:text="@string/Product_Owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintVertical_bias="0.123" />

    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintVertical_bias="0.182" />

    <TextView
            android:text="@string/po_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintVertical_bias="0.123" />

    <TextView
            android:text="@string/tel_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintVertical_bias="0.242" />

    <TextView
            android:text="burim.vrella@kotlin.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailPO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintVertical_bias="0.182" />

    <TextView
            android:text="@string/tel_nrPO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintVertical_bias="0.241" />

</androidx.constraintlayout.widget.ConstraintLayout>